# EdgeRIC-A-real-time-RIC

./: .gitignore  2ue_throttled.grc  Dockerfile  Dockerfile_EdgeRIC_build  Dockerfile_EdgeRIC_build_oaic  Dockerfile_EdgeRIC_run  Dockerfile_EdgeRIC_run_oaic  Dockerfile_srsran  Dockerfile_srsran_packages  README.md  docker_cp_edgeric.sh  docker_cp_edgeric_fromContainer.sh  docker_cp_srsran.sh  dockerbuild_edgeric.sh  dockerbuild_edgeric_oaic.sh  dockerbuild_uhd.sh  dockerbuild_uhd_srsran.sh  dockerbuild_uhd_srsran_packages.sh  dockerexec_edgeric_oaic.sh  dockerexec_uhd.sh  dockerexec_uhd_srsran.sh  dockerrun_edgeric.sh  dockerrun_edgeric_oaic.sh  dockerrun_uhd.sh  dockerrun_uhd_srsran.sh  dump.rdb  iperf_client_ue1.sh  iperf_client_ue2.sh  iperf_server_ue1_netns.sh  iperf_server_ue2_netns.sh  make_ran.sh  netns_setup.sh  out_client1.txt  out_client2.txt  params_app_1.txt  params_app_2.txt  run_app.sh  run_app_client1.sh  run_app_client2.sh  run_app_clients.sh  (+11 more)
.config/: enb.conf  epc.conf  ue.conf  ue1.conf  ue_3_site2.conf  user_db_ori.csv
EdgeRIC_main/: README.md  iperf_server_3ues.sh  run_srsran_2ue.sh  run_srsran_3ue.sh  run_srsran_4ue.sh
EdgeRIC_main-original/: README.md  params.txt  top_block_3ue_23.04MHz.py
EdgeRIC_main_ue2/: params.txt
EdgeRIC_main_ue3/: params.txt
EdgeRIC_main_ue4/: params.txt
Pytorch-RL-Custom_demo/: .gitignore  README.md  run_logging.sh  run_rl.sh  run_tensorboard.sh  run_writing.sh
edgeric/: control_actions_pb2.py  edgeric_messenger.py  metrics.proto  metrics_pb2.py  readme.md
real_time_RIC/: controller_gui.py  dashboard_perUE_v2.py  edgeric_2.py  edgeric_agent.py  edgeric_trainRL_ppo.py  param_edgeric.txt  readme.md  run_defaultscheduling.sh  run_ppo.sh  test.py
srsRAN-4G-new-ER-design/: make-ran-vanilla.sh  make-ran.sh  readme.md  run_2ue_cqi_emul.sh  run_enb.sh  run_enb_vanilla.sh  run_epc.sh  run_srsran_2ue.sh  run_srsran_4ue.sh  top_block_4ue_23.04MHz.py
srsran/: enb_emul.sh  enb_usrp.sh  params1.txt  params2.txt  ue1.sh  ue1_emul.sh
srsran-enb/srsenb/rtagent/: CMakeLists.txt  edgeric.cpp  edgeric.h  metrics.pb.cc  metrics.pb.h  scheduling_weights.pb.cc  scheduling_weights.pb.h
srsran-enb/srsenb/src/stack/mac/schedulers/: CMakeLists.txt  sched_time_pf.cc  sched_time_pf_original.cc
srsran-ue/: CMakeLists.txt  epc.sh  params1.txt  params2.txt  params4.txt  run_srsran.sh  ue2.sh  ue2_emul.sh
traffic-generator/: client_embb.py  client_mmtc.py  client_urllc.py  client_xr.py  iperf_client_2ues.sh  iperf_client_2ues_ul.sh  iperf_client_3ues.sh  iperf_client_4ues.sh  iperf_client_4ues_ul.sh  iperf_server_2ues.sh  iperf_server_2ues_ul.sh  readme.md  run_client_embb_urllc.sh  server.py
(+585 files in other folders)
